# dcmedia

./: CMakeLists.txt
include/: dcmedia_api.h  rkmedia_common.h
lib/: libeasymedia.so.1
